[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/FONT_Title.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/RetryButton.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FONT_Button.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/MissionHUD.gd" type="Script" id=4]
[ext_resource path="res://Scripts/NextMissionButton.gd" type="Script" id=5]
[ext_resource path="res://Scripts/BackToTitleButton.gd" type="Script" id=6]

[node name="MissionHUDRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
title = NodePath("Title")

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.232
margin_left = 57.0
margin_top = 25.0
margin_right = -57.0
margin_bottom = -20.2
custom_fonts/font = ExtResource( 1 )
text = "Mission xx"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.223
anchor_top = 0.204
anchor_right = 0.777
anchor_bottom = 0.408
margin_left = 57.0
margin_top = 22.12
margin_right = -57.0
margin_bottom = -21.76
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="HBoxContainer"]
margin_right = 125.0
margin_bottom = 103.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Retry"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextMissionButton" type="Button" parent="HBoxContainer"]
margin_left = 129.0
margin_right = 358.0
margin_bottom = 103.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Next Mission"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToTitleButton" type="Button" parent="HBoxContainer"]
margin_left = 362.0
margin_right = 595.0
margin_bottom = 103.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Back to Title"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/RetryButton" to="HBoxContainer/RetryButton" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="HBoxContainer/NextMissionButton" to="HBoxContainer/NextMissionButton" method="_on_NextMissionButton_pressed"]
[connection signal="pressed" from="HBoxContainer/BackToTitleButton" to="HBoxContainer/BackToTitleButton" method="_on_BackToTitleButton_pressed"]
